fix: prevent horizontal scroll on small screens

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -655,7 +655,6 @@ cds-actionable-notification * {
 
 .form-footer-group {
   display: flex;
-  width: 34.75rem;
   align-items: flex-start;
   gap: 1rem;
 }
